--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "hbs": "^4.2.0",
     "ioredis": "^5.7.0",
     "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.15.0",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.26"
   },
