--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon",
-    "build": "tsc && shx cp -r src/views dist/ && shx cp -r src/public dist/",
-    "copy:views": "cpx \"src/views/**/*\" dist/views",
+    "clean": "shx rm -rf dist",
+    "build": "npm run clean && tsc && npm run copy:views && npm run copy:public",
+    "copy:views": "copyfiles -u 1 \"src/views/**/*.hbs\" dist",
+    "copy:public": "copyfiles -u 1 \"src/public/**/*\" dist",
     "start": "node dist/index.js",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -48,6 +50,7 @@
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.1.0",
+    "copyfiles": "^2.4.1",
     "jest": "^30.1.3",
     "nodemon": "^3.1.10",
     "shx": "^0.4.0",
